--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/three": "^0.156.0",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
+    "@types/three": "^0.156.0",
     "@vitejs/plugin-react": "4.0.3",
     "typescript": "^5.7.3",
     "vite": "^4.4.5"
@@ -17,10 +17,11 @@
   "dependencies": {
     "cesium": "^1.111.0",
     "dotenv": "^16.4.7",
+    "firebase": "^11.6.0",
     "openbim-components": "1.1.1",
-    "three": "0.152.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.18.0"
+    "react-router-dom": "6.18.0",
+    "three": "0.152.2"
   }
 }
